white space fix

--- a/css/style.css
+++ b/css/style.css
@@ -204,19 +204,27 @@ select {
   background-color: #f9f9f9;
 }
 
-.header span {
+.header-main {
+  font-weight: bold;
+  width: fit-content;
+  text-align: center;
+  margin: 1.5rem auto;
+  padding: 10px 20px;
+  border-radius: 20px;
+  color: #666;
+  background-color: #f9f9f9;
+}
+
+.header-main span {
   color: #ffb700;
 }
 
 .hero {
-  /* width: 80%; */
-  margin: auto;
-  margin-bottom: 4rem;
-  margin-top: 1.4rem;
+  margin: 1rem auto;
 }
 
 .global-padding {
-  padding: 0 10rem;
+  padding: 0 13rem;
 }
 
 h1 {
@@ -237,7 +245,7 @@ h1 {
   color: #777;
   line-height: 1.8rem;
   font-size: 16px;
-  margin-bottom: 12px;
+  margin: 1rem;
 }
 
 
@@ -278,13 +286,14 @@ h1 {
   /* margin: 2rem 2rem 10rem 2rem; */
 }
 
-#overview video {
+video {
   border-radius: 12px;
-  width: 100%;
+  width: 85%;
   height: auto;
 }
 
 .running-text {
+  margin-top: 10rem;
   overflow: hidden;
 }
 
@@ -325,10 +334,6 @@ h1 {
 /* ADVANTAGES */
 #advantages {
   text-align: center;
-}
-
-#advantages .header {
-  width: 10em;
 }
 
 h2 {
@@ -749,12 +754,8 @@ h2 {
   border-radius: 20px;
 }
 
-#prices .wide-button {
-  /* width: 100%; */
-  margin: 3em auto;
-}
-
-.wide-button .learnmore {
+.learnmore {
+  margin: 2.5rem auto;
   width: 100%;
   padding: 15px;
   border-radius: 40px;
@@ -1385,5 +1386,4 @@ form button {
   .chat {
     right: 14px;
   }
-
 }
